--- a/web_app/src/templates/reports/summary_table.html
+++ b/web_app/src/templates/reports/summary_table.html
@@ -68,13 +68,16 @@
                 </div>
       </div>
 
+{% block styles %}
 <style type="text/css">
     .datatable td,th {
   overflow: hidden; /* this is what fixes the expansion */
   text-overflow: ellipsis; /* not supported in all browsers, but I accepted the tradeoff */
   white-space: nowrap;
 }
-</style>      
+</style>   
+{% endblock %}
+{% block script %}   
   <script type="text/javascript">
     $(document).ready( function () {
     $('#summary_table_id').DataTable({"scrollX": true});
@@ -94,3 +97,4 @@
     }
 
   </script>
+{% endblock %}
