--- a/web_app/src/templates/reports/rft_filter.html
+++ b/web_app/src/templates/reports/rft_filter.html
@@ -26,7 +26,7 @@
 		<form id="rft_filter" method='POST' name='form' action='{% url 'rft_search' %}' data-parsley-validate class="form-horizontal form-label-left">
 		  {% csrf_token %}
 		  <div class="form-group">
-		    <div class="col-md-5 col-sm-5 col-xs-5">
+		    <div class="col-md-4 col-sm-4 col-xs-6 col-sm-offset-2">
 		        <fieldset>
 	              <div class="control-group">
 	                <div class="controls">
@@ -39,7 +39,7 @@
 	              </div>
 	            </fieldset>
 		    </div>
-		    <div class="col-md-5 col-sm-5 col-xs-5">
+		    <div class="col-md-4 col-sm-4 col-xs-6">
 		        <fieldset>
 	              <div class="control-group">
 	                <div class="controls">
@@ -53,7 +53,7 @@
 	            </fieldset>
 		    </div>
 		  <!-- </div> -->
-          <div class="col-sm-offset-11">
+          <div class="col-md-3 col-sm-3 col-xs-6 col-sm-offset-11">
           	<button id='rft_search' type="submit" class="btn btn-success">Search</button>
           </div>
           </div>
