Shiftwise filter in RFT and X axis showing all dates

--- a/web_app/src/templates/reports/rft_final_filter_form.html
+++ b/web_app/src/templates/reports/rft_final_filter_form.html
@@ -42,7 +42,7 @@
 </form>
 {% block script %}
 <script type="text/javascript">
-$("#id_rft_final_plants, #id_rft_final_markets, #id_rft_final_base_models, #id_rft_final_models, #id_rft_final_stations").change(function (e) {
+$("#id_rft_final_plants, #id_rft_final_markets, #id_rft_final_shifts, #id_rft_final_base_models, #id_rft_final_models, #id_rft_final_stations").change(function (e) {
       e.preventDefault();
 
       var frm = $(this).closest('form');
