--- a/web_app/src/templates/reports/rft_overall_filter_form.html
+++ b/web_app/src/templates/reports/rft_overall_filter_form.html
@@ -42,7 +42,7 @@
 </form>
 {% block script %}
 <script type="text/javascript">
-$("#id_rft_overall_plants, #id_rft_overall_markets, #id_rft_overall_base_models, #id_rft_overall_models, #id_rft_overall_stations").change(function (e) {
+$("#id_rft_overall_plants, #id_rft_overall_markets, #id_rft_overall_shifts, #id_rft_overall_base_models, #id_rft_overall_models, #id_rft_overall_stations").change(function (e) {
       e.preventDefault();
 
       var frm = $(this).closest('form');
