--- a/web_app/src/templates/reports/rft_rolldown_filter_form.html
+++ b/web_app/src/templates/reports/rft_rolldown_filter_form.html
@@ -43,13 +43,12 @@
 
 {% block script %}
 <script type="text/javascript">
-$("#id_rft_rolldown_plants, #id_rft_rolldown_markets, #id_rft_rolldown_base_models, #id_rft_rolldown_models, #id_rft_rolldown_stations").change(function (e) {
+$("#id_rft_rolldown_plants, #id_rft_rolldown_markets, #id_rft_rolldown_shifts, #id_rft_rolldown_base_models, #id_rft_rolldown_models, #id_rft_rolldown_stations").change(function (e) {
       e.preventDefault();
 
       var frm = $(this).closest('form');
       var from_date = $("#rft_filter input[name=from_date]").val();
       var to_date = $("#rft_filter input[name=to_date]").val();   
-
       $.ajax({
         url: frm.attr('action'),
         method: frm.attr('method'),
