--- a/web_app/src/templates/reports/rft_rolldown_filter_form.html
+++ b/web_app/src/templates/reports/rft_rolldown_filter_form.html
@@ -11,7 +11,7 @@
     {% endif %}
     {% if rolldown_filter_form.rft_rolldown_markets %}
         <div class="col-md-2 col-lg-2 col-sm-2 col-xs-3 form-group">
-        <label for="id_rft_rolldown_plants">Markets:</label>
+        <label for="id_rft_rolldown_markets">Markets:</label>
         {{rolldown_filter_form.rft_rolldown_markets}}
         </div>
     {% endif %}
