Dpu updated and views edited

--- a/web_app/src/templates/reports/rft_chart.html
+++ b/web_app/src/templates/reports/rft_chart.html
@@ -146,15 +146,18 @@ $.ajaxSetup({
 });
 
 function rft_filter_refresh(){
+    $('#id_rft_rolldown_plants').val("");
     $('#id_rft_rolldown_markets').val("");
     $('#id_rft_rolldown_shifts').val("");
     $('#id_rft_rolldown_base_models').val("");
     $('#id_rft_rolldown_models').val("");
     $('#id_rft_rolldown_stations').val("");
+    $('#id_rft_final_plants').val("");
     $('#id_rft_final_markets').val("");
     $('#id_rft_final_shifts').val("");
     $('#id_rft_final_base_models').val("");
     $('#id_rft_final_models').val("");
+    $('#id_rft_overall_plants').val("");
     $('#id_rft_overall_markets').val("");
     $('#id_rft_overall_shifts').val("");
     $('#id_rft_overall_base_models').val("");
